# garmin_dashboard

./: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/garmin_dashboard_20260222/: index.md  metadata.json  plan.md  spec.md
docker/: services.compose.yml
docs/plans/: 2026-02-23-cache-design.md  2026-02-23-cache-implementation.md
frontend/: .dockerignore  .gitignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: app.vue
frontend/app/components/: RunGoalProgress.vue  WeeklySummary.vue
frontend/app/components/activity/: ActivityBadge.vue  ActivityTypeDot.vue  MetricRow.vue  StatBlock.vue  TrainingEffectBar.vue
frontend/app/components/ui/: AppButton.vue  AppCard.vue  AppSkeleton.vue
frontend/app/composables/: useActivityUtils.ts  useApiBase.ts  useConfig.ts  useFormatters.ts  useWeeklyActivities.ts
frontend/app/pages/: index.vue
frontend/app/pages/activities/: [id].vue  index.vue
frontend/app/pages/stats/: distance.vue  hr.vue  intensity.vue  sessions.vue  sleep.vue
frontend/components/: RunGoalProgress.vue
frontend/coverage/: coverage-final.json  index.html
frontend/coverage/components/: RunGoalProgress.vue.html  WeeklySummary.vue.html  index.html
frontend/coverage/pages/: index.html  index.vue.html
frontend/pages/: index.vue
frontend/server/plugins/: logging.ts
frontend/tests/components/: RunGoalProgress.test.ts  WeeklySummary.test.ts
garmin_dashboard/: fetcher.py
src/garmin_dashboard/: cache.py  fetcher.py  main.py  main.py-header.tmp
tests/: test_api.py  test_cache.py  test_garmin_fetcher.py
