[project]
name = "garmin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dependency-injector>=4.48.3",
    "fastapi>=0.129.2",
    "garminconnect>=0.2.23",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
